@@ -6,8 +6,8 @@ import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
 import com.itemis.fluffyj.memory.api.FluffySegment;
 import com.itemis.fluffyj.memory.internal.impl.FluffySegmentImpl;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 
 /**
@@ -19,19 +19,19 @@ public class ByteSegment extends FluffySegmentImpl implements FluffyScalarSegmen
      * Allocate a new segment.
      *
      * @param initialValue - The new segment will hold this value.
-     * @param scope - The new segment will be attached to this scope.
+     * @param arena - The new segment will be attached to this arena.
      */
-    public ByteSegment(byte initialValue, SegmentScope scope) {
-        super(new byte[] {initialValue}, requireNonNull(scope, "scope"));
+    public ByteSegment(final byte initialValue, final Arena arena) {
+        super(new byte[] {initialValue}, requireNonNull(arena, "arena"));
     }
 
     /**
      * Wrap the provided {@code backingSeg}. The constructed segment will be attached to the same
-     * scope as the {@code backingSeg}.
+     * arena as the {@code backingSeg}.
      *
      * @param backingSeg - The raw segment to wrap.
      */
-    public ByteSegment(MemorySegment backingSeg) {
+    public ByteSegment(final MemorySegment backingSeg) {
         super(backingSeg);
     }
 
